Все исправленно, кроме одного вопроса на ограничения в конструкторе